--- a/css/style.css
+++ b/css/style.css
@@ -54,8 +54,8 @@ h1{
 .price-color{
     color: goldenrod;
 }
-.sercice-area{
-    border-radius: 10px;
+.service-area{
+    border-radius: 20px;
 }
 .extra-part{
     background-color: black;
